--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,9 @@ services:
       - DISPLAY=:1  # Change this to match your VNC server's display number
       - QT_X11_NO_MITSHM=1
       - LIBGL_ALWAYS_INDIRECT=1
+      - ROS_DOMAIN_ID=69
+      - ROS_LOCALHOST_ONLY=0
+      - RMW_IMPLEMENTATION=rmw_fastrtps_cpp
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ./ros2_ws:/ros2_ws
